# exact-mcp

./: .env.example  .gitignore  PRD.MD  README.md  pyproject.toml
docs/plans/: 2026-07-01-exact-online-mcp-design.md  2026-07-01-exact-online-mcp-implementation.md  2026-07-02-runtime-logging-design.md  2026-07-02-runtime-logging-implementation.md  2026-07-03-all-endpoints-implementation.md  2026-07-03-all-missing-endpoints-design.md  2026-07-03-all-missing-endpoints-implementation.md  2026-07-03-interactive-auth-design.md  2026-07-03-interactive-auth-implementation.md  2026-07-03-mandatory-generic-select-design.md  2026-07-15-mcp-resilience-expressiveness-design.md  2026-07-15-mcp-resilience-expressiveness-implementation.md  2026-07-16-oauth-expires-in-design.md  2026-07-17-unredacted-curl-logging-design.md  2026-07-17-unredacted-curl-logging.md
scripts/: __init__.py  generate_endpoint_registry.py
src/exact_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  endpoint_registry.json  endpoints.py  errors.py  logging.py  models.py  odata.py  rate_limit.py  server.py  service.py  tokens.py
tests/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_endpoint_registry_generation.py  test_endpoints.py  test_logging.py  test_models.py  test_odata.py  test_rate_limit.py  test_server.py  test_service.py  test_tokens.py
