[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "exact-online-mcp"
version = "0.1.0"
description = "Secure Model Context Protocol server for Exact Online"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44",
  "httpx>=0.28",
  "mcp>=1.27,<2",
  "pydantic>=2.11",
  "pydantic-settings>=2.9",
  "typer>=0.16",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16",
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
  "respx>=0.22",
  "ruff>=0.12",
]

[project.scripts]
exact-mcp = "exact_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/exact_mcp"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["exact_mcp"]
